# libgoc

./: .gitignore  ARRAY.md  CMakeLists.txt  DESIGN.md  HTTP.md  IO.md  LICENSE  OPTIMIZATION.md  OPTIMIZATIONS.md  README.md  SERVER.md  TELEMETRY.md  TODO.md  libgoc.pc.in  run_test_loop.sh  test.sh
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  claude-code-review.yml  claude.yml
bench/: README.md  run-all.sh
bench/clojure/: Makefile  README.md  deps.edn
bench/clojure/src/bench/: core.clj
bench/go/: Makefile  README.md  main.go
bench/libgoc/: Makefile  README.md  bench-libgoc-vmem  bench-vmem-old  bench.c
build-bench-vmem/: CTestTestfile.cmake  Makefile
build-bench-vmem-old/: CTestTestfile.cmake  Makefile  libgoc.pc
docs/: ARRAY.md  DESIGN.md  DICT.md  GOC.md  HTTP.md  IO.md  JSON.md  OPTIMIZATION.md  SCHEMA.md  TELEMETRY.md
include/: goc.h  goc_array.h  goc_dict.h  goc_http.h  goc_io.h  goc_json.h  goc_schema.h  goc_server.h  goc_stats.h
src/: alts.c  chan_type.h  channel.c  channel_internal.h  config.h  fiber.c  gc.c  goc_array.c  goc_debug.c  goc_dict.c  goc_http.c  goc_io.c  goc_json.c  goc_schema.c  goc_schema_internal.h  goc_server.c  goc_stats.c  goc_types.h  internal.h  loop.c  minicoro.c  mutex.c  pool.c  stats.c  timeout.c  wsdq.c  wsdq.h
tests/: test_goc_array.c  test_goc_dict.c  test_goc_http.c  test_goc_json.c  test_goc_schema.c  test_goc_stats.c  test_harness.h  test_p01_foundation.c  test_p02_channels_fibers.c  test_p03_channel_io.c  test_p04_callbacks.c  test_p05_select_timeout.c  test_p06_thread_pool.c  test_p07_integration.c  test_p08_safety.c  test_p09_mutexes.c  test_p10_io.c  test_p10_take_all.c  test_p11_http.c  test_p11_server.c  test_p1_foundation.c  test_p2_channels_fibers.c  test_p3_channel_io.c  test_p4_callbacks.c  test_p5_select_timeout.c  test_p6_thread_pool.c  test_p7_integration.c  test_p8_safety.c  test_p9_mutexes.c
